[package]
name = "access-log-parser"
version = "0.1.0"
edition = "2024"
description = "A byte-lexed Combined Log Format to CSV converter"
license = "MIT"

[dependencies]
chrono = { version = "0.4.44", default-features = false, features = ["std"] }
clap = { version = "4.6.1", features = ["derive"] }
csv = "1.4.0"

[dev-dependencies]
tempfile = "3.27.0"
